@@ -3,6 +3,11 @@ Changes from 0.13.0
    [ Language Changes ]
    * Single-character "sharp macros" changed to "tag macros", which can have
      longer names
+   * Periods are no longer allowed in keywords
+
+   [ Bug Fixes ]
+   * Numeric literals are no longer parsed as symbols when followed by a dot
+     and a symbol
 
 Changes from 0.12.1
 
